# aws-lambda-extensions

./: .gitignore  README.md
aws-lambda-extension-fluent-bit/: README.md  go.mod  go.sum  main.go
awsappconfig-extension-demo/: README.md  template.yml
bash-example-wrapper/: README.md  lambda_function.py  wrapper_script
cache-extension-demo/: .gitignore  README.md  go.mod  go.sum  main.go
csharp-example-extension/: .gitignore  ExtensionClient.cs  ExtensionEvent.cs  Program.cs  README.md  csharp-example-extension.csproj  dotnet-example-extension.csproj  dotnet-example-extension.sln  run.sh
custom-runtime-extension-demo/: README.md  template.yml
go-example-adaptive-batching-extension/: Makefile  README.md  go.mod  go.sum  main.go  template.yaml
go-example-crash-uploader-extension/: .gitignore  README.md  files_with_substring.go  go.mod  go.sum  main.go  pack.sh  upload.go  use-aws-sdk.go
go-example-extension/: Makefile  README.md  go.mod  main.go
go-example-extension-sam-layer/: .gitignore  README.md  go-example-extension  template.yaml
go-example-ipc-extension/: README.md  go.mod  main.go
go-example-lambda-runtime-api-proxy-extension/: .gitignore  Makefile  README.md  go.mod  template.yaml  (+1 more)
rust-example-lambda-runtime-api-proxy-extension/: .gitignore  Cargo.toml  Makefile  README.md
rust-example-lambda-runtime-api-proxy-extension/opt/: entrypoint  wrapper
rust-example-lambda-runtime-api-proxy-extension/src/: env.rs  main.rs  route.rs  sandbox.rs  stats.rs
rust-example-lambda-runtime-api-proxy-extension/src/util/: limited_buffer.rs  mod.rs
(+220 files in other folders)
