[package]
name = "aws-lambda-runtime-api-proxy-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
once_cell = "1.18.0"
parking_lot = "0.12.1"
tokio = { version = "1.29.1", features = ["full"] }
tokio-util = { version = "0.7.8", features = ["io"] }
hyper = { version = "0.14.27", features = ["client", "server", "runtime", "tcp", "stream", "http1"] }
httprouter = "0.5.0"

[features]
default = []
